feat: add nutrition programs section

--- a/index.html
+++ b/index.html
@@ -38,10 +38,48 @@
         <div class="content">
           <h1 class="title">Функциональное питание для котов</h1>
           <p class="description">Занялся собой? Займись котом!</p>
-          <a href="#" role="button" class="link">подобрать программу</a>
+          <a href="#" class="link">подобрать программу</a>
         </div>
         <div class="hero-background-cat"></div>
         <div class="hero-background-glass"></div>
+      </section>
+
+      <section class="nutrition-programs container">
+        <ul class="list">
+          <li class="item">
+            <div class="item-content">
+              <h2 class="title">похудение</h2>
+              <p class="description">
+                Ваш кот весит больше собаки и почти утратил способность лазить
+                по деревьям? Пора на диету! Cat Energy Slim поможет вашему
+                питомцу сбросить лишний вес.
+              </p>
+              <hr />
+              <a href="#" class="link">
+                <span class="link-content">каталог slim</span>
+                <span class="link-arrow--line"></span>
+                <span class="link-arrow--tip"></span>
+              </a>
+            </div>
+            <div class="image image--cat-back"></div>
+          </li>
+          <li class="item">
+            <div class="item-content">
+              <h2 class="title">набор массы</h2>
+              <p class="description">
+                Заработать авторитет среди дворовых котов и даже собак? Серия
+                Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
+              </p>
+              <hr />
+              <a href="#" class="link">
+                <span class="link-content">каталог pro</span>
+                <span class="link-arrow--line"></span>
+                <span class="link-arrow--tip"></span>
+              </a>
+            </div>
+            <div class="image image--cat-back-2"></div>
+          </li>
+        </ul>
       </section>
     </main>
     <footer></footer>
