--- a/index.html
+++ b/index.html
@@ -81,6 +81,44 @@
           </li>
         </ul>
       </section>
+
+      <section class="steps container">
+        <h2 class="title">Как это работает</h2>
+        <ul class="list">
+          <li class="item">
+            <div class="icon icon--leaf"></div>
+            <span class="step">1</span>
+            <p class="description">
+              Функциональное питание содержит только полезные питательные
+              вещества.
+            </p>
+          </li>
+          <li class="item">
+            <div class="icon icon--tub"></div>
+            <span class="step">2</span>
+            <p class="description">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и
+              готово.
+            </p>
+          </li>
+          <li class="item">
+            <div class="icon icon--eat"></div>
+            <span class="step">3</span>
+            <p class="description">
+              Замените один-два приема обычной еды на наше функциональное
+              питание.
+            </p>
+          </li>
+          <li class="item">
+            <div class="icon icon--alarm"></div>
+            <span class="step">4</span>
+            <p class="description">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего
+              питомца!
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
