feat: add results section

--- a/index.html
+++ b/index.html
@@ -119,6 +119,49 @@
           </li>
         </ul>
       </section>
+
+      <section class="results container">
+        <div class="results-content-wrapper">
+          <h2 class="title">Живой пример</h2>
+          <div class="results-content">
+            <p class="description">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+              Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+              этом он не менял своих привычек и по-прежнему спит по 16 часов в
+              день.
+            </p>
+            <div class="data">
+              <div class="modules">
+                <div class="module">
+                  <span class="label label--first">снижение веса</span>
+                  <p class="value">5 КГ</p>
+                </div>
+                <div class="module">
+                  <span class="label label--second">затрачено времени</span>
+                  <p class="value">60 ДНЕЙ</p>
+                </div>
+              </div>
+              <div class="price-wrapper">
+                <span class="label">Затраты на питание: </span>
+                <p class="value">15 000 РУБ.</p>
+              </div>
+            </div>
+          </div>
+          <div class="results-slider">
+            <div class="images">
+              <img class="slide slide--before" src="/assets/images/cat-before.png" alt="Было"></img>
+              <img class="slide slide--after" src="/assets/images/cat-after.png" alt="Стало"></img>
+            </div>
+            <div class="controller">
+              <input class="controller-input--results" type="range" name="results" min="0" max="100" value="50" step="50">
+              <span class="label label--before">было</span>
+              <span class="label label--after">стало</span>
+            </div>
+          </div>
+          <div class="results-background--before"></div>
+          <div class="results-background--after"></div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
