--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://api-maps.yandex.ru/v3/?apikey=77a00ec2-affc-4e1f-bb90-f17f38d99548&lang=ru_RU"></script>
     <title>Cat energy</title>
   </head>
   <body></body>
